--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
+    "html2canvas": "^1.4.1",
     "next": "14.0.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
