--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.1",
-    "@types/node": "20.9.3",
+    "@types/node": "20.9.4",
     "@types/react": "18.2.38",
-    "@types/react-dom": "18.2.16",
+    "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.16",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
-    "html2canvas": "^1.4.1",
+    "html-to-image": "^1.11.11",
     "next": "14.0.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
