--- a/package.json
+++ b/package.json
@@ -10,19 +10,27 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/themes": "^2.0.1",
     "@types/node": "20.9.4",
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.16",
+    "class-variance-authority": "^0.7.1",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "html-to-image": "^1.11.11",
+    "lucide-react": "^0.488.0",
     "next": "14.2.10",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "3.3.5",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.2"
   }
 }
