--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.488.0",
     "next": "14.2.10",
     "postcss": "8.4.31",
