--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-popover": "^1.1.8",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.4",
@@ -20,6 +21,7 @@
     "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.1",
+    "date-fns": "^3.6.0",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "html-to-image": "^1.11.11",
@@ -28,6 +30,7 @@
     "next": "14.2.10",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "3.3.5",
